kubernetes/Frontend-Deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend-label

  template:
    metadata:
      labels:
        app: frontend-label

    spec:
      containers:
        - name: frontend
          image: suryasuraj/psfrontend:latest
          ports:
            - containerPort: 80
