kubernetes/Backend-Service.yml
apiVersion: v1
kind: Service

metadata:
  name: backend-service

spec:
  selector:
    app: backend-label

  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000

  type: ClusterIP
