kubernetes/Frontend-Service.yml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service

spec:
  type: LoadBalancer

  selector:
    app: frontend-label

  ports:
    - port: 80
      targetPort: 80
